[demos] Fix the contrast between the summary and the background

--- a/demos/style.scss
+++ b/demos/style.scss
@@ -20,7 +20,7 @@ section[mv-app="demos"] {
 		& > summary {
 			margin-bottom: 0.5em;
 			font: bold 200% $heading-font;
-			color: $orange;
+			color: $blue;
 		}
 
 		& > div {
